# QAdwaitaDecorations

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yaml  clang-format-check.yaml
src/: CMakeLists.txt  qadwaitadecoration.cpp  qadwaitadecoration.h  qadwaitadecorationplugin.cpp  qadwaitadecorationplugin.h  qadwaitadecorations.cpp  qadwaitadecorations.h  qadwaitadecorations.json  qadwaitadecorationsplugin.cpp  qadwaitadecorationsplugin.h
